// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ShopOnlineNavDropdown
    alertIsActive={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    productLanding={
        Object {
            "description": "foo",
            "hideWholesaleBlock": false,
            "iceCreamDescription": "",
            "iceCreamProducts": Array [],
            "iceCreamTitle": "foo",
            "merchandiseDescription": "foo",
            "merchandiseProducts": Array [],
            "merchandiseTitle": "",
            "products": Array [],
            "subNavigation": true,
            "title": "foo",
            "wholesaleDescription": "foo",
            "wholesaleImage": Object {
              "fields": Object {
                "file": Object {
                  "url": "foo",
                },
              },
              "sys": Object {
                "id": "foo",
              },
            },
            "wholesaleTitle": "foo",
          }
    }
    shopOnlineDropdownIsOpen={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="absolute z-nav"
>
        <div
                className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
        >
                <div
                        className="col-6 flex flex-row justify-center mx-auto"
                >
                        
                </div>
                <div
                        className="col-2 absolute r0"
                >
                        <p
                                className="text-white bold"
                        >
                                Merch
                        </p>
                </div>
        </div>
</div>,
      "className": "relative z-nav",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
>
          <div
                    className="col-6 flex flex-row justify-center mx-auto"
          >
                    
          </div>
          <div
                    className="col-2 absolute r0"
          >
                    <p
                              className="text-white bold"
                    >
                              Merch
                    </p>
          </div>
</div>,
        "className": "absolute z-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-6 flex flex-row justify-center mx-auto"
>
              
</div>,
            <div
              className="col-2 absolute r0"
>
              <p
                            className="text-white bold"
              >
                            Merch
              </p>
</div>,
          ],
          "className": "w100 pt3 px4 bg-peach fixed drip flex flex-row items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
              "className": "col-6 flex flex-row justify-center mx-auto",
            },
            "ref": null,
            "rendered": Array [],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="text-white bold"
>
                  Merch
</p>,
                Array [],
              ],
              "className": "col-2 absolute r0",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Merch",
                  "className": "text-white bold",
                },
                "ref": null,
                "rendered": "Merch",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="absolute z-nav"
>
          <div
                    className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
          >
                    <div
                              className="col-6 flex flex-row justify-center mx-auto"
                    >
                              
                    </div>
                    <div
                              className="col-2 absolute r0"
                    >
                              <p
                                        className="text-white bold"
                              >
                                        Merch
                              </p>
                    </div>
          </div>
</div>,
        "className": "relative z-nav",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
>
            <div
                        className="col-6 flex flex-row justify-center mx-auto"
            >
                        
            </div>
            <div
                        className="col-2 absolute r0"
            >
                        <p
                                    className="text-white bold"
                        >
                                    Merch
                        </p>
            </div>
</div>,
          "className": "absolute z-nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-6 flex flex-row justify-center mx-auto"
>
                
</div>,
              <div
                className="col-2 absolute r0"
>
                <p
                                className="text-white bold"
                >
                                Merch
                </p>
</div>,
            ],
            "className": "w100 pt3 px4 bg-peach fixed drip flex flex-row items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [],
                "className": "col-6 flex flex-row justify-center mx-auto",
              },
              "ref": null,
              "rendered": Array [],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="text-white bold"
>
                    Merch
</p>,
                  Array [],
                ],
                "className": "col-2 absolute r0",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Merch",
                    "className": "text-white bold",
                  },
                  "ref": null,
                  "rendered": "Merch",
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ShopOnlineNavDropdown
    alertIsActive={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    productLanding={Object {}}
    shopOnlineDropdownIsOpen={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="absolute z-nav"
>
        <div
                className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
        >
                <div
                        className="col-6 flex flex-row justify-center mx-auto"
                >
                        
                </div>
                <div
                        className="col-2 absolute r0"
                >
                        <p
                                className="text-white bold"
                        >
                                Merch
                        </p>
                </div>
        </div>
</div>,
      "className": "relative z-nav",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
>
          <div
                    className="col-6 flex flex-row justify-center mx-auto"
          >
                    
          </div>
          <div
                    className="col-2 absolute r0"
          >
                    <p
                              className="text-white bold"
                    >
                              Merch
                    </p>
          </div>
</div>,
        "className": "absolute z-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-6 flex flex-row justify-center mx-auto"
>
              
</div>,
            <div
              className="col-2 absolute r0"
>
              <p
                            className="text-white bold"
              >
                            Merch
              </p>
</div>,
          ],
          "className": "w100 pt3 px4 bg-peach fixed drip flex flex-row items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
              "className": "col-6 flex flex-row justify-center mx-auto",
            },
            "ref": null,
            "rendered": Array [],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="text-white bold"
>
                  Merch
</p>,
                Array [],
              ],
              "className": "col-2 absolute r0",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Merch",
                  "className": "text-white bold",
                },
                "ref": null,
                "rendered": "Merch",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="absolute z-nav"
>
          <div
                    className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
          >
                    <div
                              className="col-6 flex flex-row justify-center mx-auto"
                    >
                              
                    </div>
                    <div
                              className="col-2 absolute r0"
                    >
                              <p
                                        className="text-white bold"
                              >
                                        Merch
                              </p>
                    </div>
          </div>
</div>,
        "className": "relative z-nav",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 pt3 px4 bg-peach fixed drip flex flex-row items-center"
>
            <div
                        className="col-6 flex flex-row justify-center mx-auto"
            >
                        
            </div>
            <div
                        className="col-2 absolute r0"
            >
                        <p
                                    className="text-white bold"
                        >
                                    Merch
                        </p>
            </div>
</div>,
          "className": "absolute z-nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-6 flex flex-row justify-center mx-auto"
>
                
</div>,
              <div
                className="col-2 absolute r0"
>
                <p
                                className="text-white bold"
                >
                                Merch
                </p>
</div>,
            ],
            "className": "w100 pt3 px4 bg-peach fixed drip flex flex-row items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [],
                "className": "col-6 flex flex-row justify-center mx-auto",
              },
              "ref": null,
              "rendered": Array [],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="text-white bold"
>
                    Merch
</p>,
                  Array [],
                ],
                "className": "col-2 absolute r0",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Merch",
                    "className": "text-white bold",
                  },
                  "ref": null,
                  "rendered": "Merch",
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
